--- a/big basket clone/bigbasket.html
+++ b/big basket clone/bigbasket.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bigbasket clone</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="day5.css">
+    <link rel="stylesheet" href="bigbasket.css">
 </head>
 <body>
     <header class="header">
@@ -16,6 +16,7 @@
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i> 
                 <input type="text" placeholder="Search for products..." class="search-input">
+             
         </div>
     </div>
 
